Rename methods and variables for better readability

--- a/test.ipynb
+++ b/test.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "<ladders.Expression at 0x1069c9810>"
+       "<ladders.Expression at 0x104739810>"
       ]
      },
      "execution_count": 3,
